项目架构修改